@@ -14,6 +14,12 @@ CHANGES
     that weren't previously saved in the "mutable changes"
     dictionary.
 
+  - "innerjoin" flag doesn't take effect along the chain
+    of joinedload() joins if a previous join in that chain
+    is an outer join, thus allowing primary rows without
+    a referenced child row to be correctly returned
+    in results.  [ticket:1954]
+    
 - mysql
   - Fixed error handling for Jython + zxjdbc, such that 
     has_table() property works again.  Regression from
